GET event/:id
